# OccamO

./: .dockerignore  .gitignore  .occamo.example.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  NOTICE  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md  mypy.ini  pyproject.toml  ruff.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: action-e2e.yml  bench-baseline.yml  bench.yml  ci.yml  dependency-review.yml  docker.yml  occamo-baseline.yml  publish.yml  release-please.yml
action/: README.md  action.yml
docs/: ARCHITECTURE.md  INTEGRATIONS.md  IR.md  POLICY_COOKBOOK.md  RELEASING.md  REPRODUCIBILITY.md  RULES.md  RULE_SDK.md  SUPPLY_CHAIN.md
examples/: README.md
examples/python/: linear.py  nlogn_sort.py  quadratic_nested.py
schema/: occamo.config.schema.json  occamo.schema.json
src/occamo/: __init__.py  cli.py
src/occamo/analyze/: cache.py  call_graph.py  combine.py  dispatch.py  dynamic_fit.py  dynamic_verify.py  entrypoints.py  go.py  hot_paths.py  identity.py  java.py  js_ts.py  kotlin.py  regression.py  scoring.py  signals.py  static_ast.py  suppression_utils.py  suppressions.py
src/occamo/bench/: __init__.py  generators.py  isolation.py  runner.py
src/occamo/config/: loader.py  schema.py  templates.py  validate.py
src/occamo/git/: diff.py
src/occamo/ir/: __init__.py  go.py  java.py  (+5 more)
tests/: test_bench_runner.py  test_call_graph.py  test_cli_init.py  test_cli_smoke.py  test_comment_format.py  test_config_loader.py  test_config_validate.py  test_diff_filter.py  test_entrypoints.py  test_filters.py  test_findings_gating.py  test_gating.py  test_hot_paths.py  test_regression.py  test_report_html.py  test_report_json.py  test_report_snapshots.py  test_rule_false_positive_corpus.py  test_rules_builtin.py  test_snippets.py  test_static_ast.py  test_suppressions.py  test_trend.py
tests/fixtures/: report_fixture.json
vscode/: .vscodeignore  CHANGELOG.md  README.md  package.json  tsconfig.json
vscode/src/: extension.ts
(+30 files in other folders)
