[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "occamo"
version = "0.1.0"
description = "OccamO — Automated Complexity & Performance Regression Guard"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "OccamO Contributors" }]
keywords = ["complexity", "performance", "regression", "static-analysis", "ast"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "PyYAML>=6.0.1",
]

[project.urls]
Homepage = "https://github.com/reiidoda/OccamO"
Source = "https://github.com/reiidoda/OccamO"
Issues = "https://github.com/reiidoda/OccamO/issues"
Changelog = "https://github.com/reiidoda/OccamO/blob/main/CHANGELOG.md"

[project.scripts]
occamo = "occamo.cli:main"
occamo-bench = "occamo.bench.runner:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "mypy>=1.8",
  "ruff>=0.5",
  "pre-commit>=3.7",
  "types-PyYAML>=6.0.12.20240917",
]
bench = [
  "pyperf>=2.6",
]
js = [
  "tree_sitter>=0.20",
  "tree_sitter_languages>=1.7",
]
release = [
  "build>=1.2",
]
gitignore = [
  "pathspec>=0.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/occamo"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
